--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content=device width, initial-cale= 1.0>
-<link rel= "tulesheet" type "text/css">
-<title>loja</title>
+<meta name="viewport" content=device width, initial-cale=1.0>
+
+<link rel="stylesheet" type="text/css"
+href="css/style.css">
+
+<title>site</title>
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
-<h1> site <h1>
+<h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<i class="fa-solid fa-ghost"></i>
 
-</body
-</html>
+<div class="div1"> grande laio </div>
+<div class="div2"> menino renato </div>
+<div class="div3">  supergay </div>
