--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,12 +14,27 @@ href="css/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
-
+    <i class="fa-solid fa-ghost"></i>
 
 </head>
 
 <body>
 <h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<i class="fa-solid fa-ghost"></i>
+</head>
 
+<body>
+    <header>
+    <h1>cabeçalho</h1>
+    <nav>
+    <ul>
+    <li><a href="#">home</a> </li>
+    <li><a href="#">sobre</a> <li>
+    <li><a href="#">contato</a> <li>
+        </ul>
+    </nav>
+    </header>
+    <div class=".container">
 
+</body>
+
+</html>
