--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content=device width, initial-cale=1.0>
+<meta name="viewport" content=device width, initial-scale=1.0>
 
 <link rel="stylesheet" type="text/css"
 href="css/style.css">
@@ -17,11 +17,6 @@ href="css/style.css">
     <i class="fa-solid fa-ghost"></i>
 
 </head>
-
-<body>
-<h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
 <body>
     <header>
     <h1>cabeçalho</h1>
@@ -32,6 +27,22 @@ href="css/style.css">
     <li><a href="#">contato</a> <li>
         </ul>
     </nav>
+    <div id="main-banner">
+                <div id="search-form">
+                    <h1> a maneira mais facil de encontrar seu novo emprego</h1>
+                    <p> conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
+                    <form>
+                        <input type="text" name="job" placeholder="digite um cargo">
+                        <select name="region">
+                            <option value="">todos o estados</option>
+                        </select>
+                        <select name="category">
+                            <option value="">categoria</option>
+                        </select>
+                        <input type="submit" value="pesquisar">
+                    </form>
+                </div>
+            </div>
     </header>
     <div class=".container">
 
