--- a/index.html
+++ b/index.html
@@ -1,51 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content=device width, initial-scale=1.0>
+<title> curso </title>
+    <meta charet= / "utf-8">
+    <meta name= "viewport"content= "width=device-width-sacale=1.0">    
+    <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
-<link rel="stylesheet" type="text/css"
-href="css/style.css">
-
-<title>site</title>
-
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
-    <i class="fa-solid fa-ghost"></i>
-
-</head>
-<body>
+    </head>
+<body>  
+    <div class="container">
+    </div>
     <header>
-    <h1>cabeçalho</h1>
-    <nav>
-    <ul>
-    <li><a href="#">home</a> </li>
-    <li><a href="#">sobre</a> <li>
-    <li><a href="#">contato</a> <li>
-        </ul>
-    </nav>
-    <div id="main-banner">
-                <div id="search-form">
-                    <h1> a maneira mais facil de encontrar seu novo emprego</h1>
-                    <p> conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
-                    <form>
-                        <input type="text" name="job" placeholder="digite um cargo">
-                        <select name="region">
-                            <option value="">todos o estados</option>
-                        </select>
-                        <select name="category">
-                            <option value="">categoria</option>
-                        </select>
-                        <input type="submit" value="pesquisar">
-                    </form>
-                </div>
+        <nav>
+            <div class="nav-container">
+               
+<i class="fa-solid fa-seedling"></i>
             </div>
-    </header>
-    <div class=".container">
+        </nav>
+   </header>
+<div id="main-banner">
+       <div id="search-form">
+           <h1> A maneira mais fácil de encontrar emprego </h1>
+               <p> Conecte-se de forma gratuita às melhores empresas e consiga o emprego dos seus sonhos.</p>
+                   <form>
+                       <input type="text" name="job" placeholder=" digite algo">
+                          <select name="region">
+                        <option value="  ">todos os estados</optoun>
+                     </select>
+                 <select name="category">
+            <option value="  "> categoria </optoun>
+        </select>
+    <imput type="submit" value="pesquisar">
+ </form>
+ <h1></h1>
+ <i class="fa-solid fa-phone"></i>
+    </body>
+    </html>
 
-</body>
 
-</html>
