--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                    <form>
                        <input type="text" name="job" placeholder=" digite algo">
                           <select name="region">
-                        <option value="  ">todos os estados</optoun>
+                        <option value="  ">todos os estados</option>
                      </select>
                  <select name="category">
-            <option value="  "> categoria </optoun>
+            <option value="  "> categoria </option>
         </select>
-    <imput type="submit" value="pesquisar">
+    <input type="submit" value="pesquisar">
  </form>
  <h1></h1>
  <i class="fa-solid fa-phone"></i>
