--- a/site_exemplo-main/index.html
+++ b/site_exemplo-main/index.html
@@ -1,46 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>JobFinder</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-	</head>
-	<body>
-		<div class="container">
-			<header>
-				<nav>
-					<div class="nav-container">
-						<img id="logo" src="img/logo.png" alt="JobFinder">
-						<ul>
-							<li><a href="#">Encontrar vaga</a></li>
-							<li><a href="#">Enviar vaga</a></li>
-							<li><a href="#">Contato</a></li>
-						</ul>
-					</div>
-				</nav>
-				<div id="main-banner">
-					<div id="search-form">
-						<h1>A maneira mais fácil de encontrar seu novo emprego</h1>
-						<p>Conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
-						<form>
-							<input type="text" name="job" placeholder="Digite o cargo">
-							<select name="region">
-								<option value="">Todos os estados</option>
-							</select>
-							<select name="category">
-								<option value="">Categoria</option>
-							</select>
-							<input type="submit" value="Pesquisar">
-						</form>
-					</div>
-				</div>
-			</header>			
-		</div>				
-	</body>
-	<!-- <script src="https://kit.fontawesome.com/595d04b7d2.js" crossorigin="anonymous"></script> -->
-</html>
+<head>
+<title> curso </title>
+    <meta charet= / "utf-8">
+    <meta name= "viewport"content= "width=device-width-sacale=1.0">    
+    <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+    </head>
+<body>  
+    <div class="container">
+    </div>
+    <header>
+        <nav>
+            <div class="nav-container">
+               
+<i class="fa-solid fa-seedling"></i>
+            </div>
+        </nav>
+   </header>
+<div id="main-banner">
+       <div id="search-form">
+           <h1> A maneira mais fácil de encontrar emprego </h1>
+               <p> Conecte-se de forma gratuita às melhores empresas e consiga o emprego dos seus sonhos.</p>
+                   <form>
+                       <input type="text" name="job" placeholder=" digite algo">
+                          <select name="region">
+                        <option value="  ">todos os estados</option>
+                     </select>
+                 <select name="category">
+            <option value="  "> categoria </option>
+        </select>
+    <input type="submit" value="pesquisar">
+ </form>
+ <h1></h1>
+    </body>
+    </html>
+
+
